--- a/OnePage.Html
+++ b/OnePage.Html
@@ -51,31 +51,29 @@
 
 
     <section id="skills" class="skills">
-        <div class="skills-container">
-            <div class="skills-list">
-                <h2>Professional Skills</h2>
-                <div class="skill">
-                    <h3>UI/UX Design</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 75%;">75%</div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <h3>Web Development</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;">90%</div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <h3>Marketing</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 65%;">65%</div>
-                    </div>
+        <div class="skills-list">
+            <h2>Professional Skills</h2>
+            <div class="skill">
+                <h3>UI/UX Design &nbsp;&nbsp;&nbsp;75%</h3>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 75%;"></div>
                 </div>
             </div>
-            <div class="skills-image">
-                <img src="skills-img.jpg" alt="skills-img">
+            <div class="skill">
+                <h3>Web Development &nbsp;&nbsp;&nbsp;90%</h3>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 90%;"></div>
+                </div>
             </div>
+            <div class="skill">
+                <h3>Marketing &nbsp;&nbsp;&nbsp;65%</h3>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 65%;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-image">
+            <img src="skills-img.jpg" alt="skills-img">
         </div>
     </section>
 
