--- a/OnePage.Html
+++ b/OnePage.Html
@@ -78,26 +78,61 @@
     </section>
 
     <section id="portfolio" class="portfolio">
-        <div class="portfolio-content">
-            <h3>548</h3>
-            <p>Projects completed</p>
+        <div class = "portfolio-item">
+            <img src="portfolio1.jpg" alt="">
+            <div class="portfolio-content">
+                <h3>548</h3>
+                <p>Projects completed</p>
+            </div>
         </div>
-        <div class="portfolio-content">
-            <h3>1465</h3>
-            <p>Working hours</p>
+        <div class = "portfolio-item">
+            <img src="portfolio2.jpg" alt="">
+            <div class="portfolio-content">
+                <h3>1465</h3>
+                <p>Working hours</p>
+            </div>
         </div>
-        <div class="portfolio-content">
-            <h3>612</h3>
-            <p>Positive feedbacks</p>
+        <div class = "portfolio-item">
+            <img src="portfolio3.jpg" alt="">
+            <div class="portfolio-content">
+                <h3>612</h3>
+                <p>Positive feedbacks</p>
+            </div>
         </div>
-        <div class="portfolio-content">
-            <h3>735</h3>
-            <p>Happy clients</p>
+        <div class = "portfolio-item">
+            <img src="portfolio4.jpg" alt="">
+            <div class="portfolio-content">
+                <h3>735</h3>
+                <p>Happy clients</p>
+            </div>
         </div>
     </section>
 
+    <div class="gallery">
+        <div class="gallery-row">
+            <img src="gallery1.jpg" alt="">
+            <img src="gallery2.jpg" alt="">
+            <img src="gallery3.jpg" alt="">
+            <img src="gallery4.jpg" alt="">
+        </div>
+        <div class="gallery-row">
+            <img src="gallery5.jpg" alt="">
+            <img src="gallery6.jpg" alt="">
+            <img src="gallery7.jpg" alt="">
+            <img src="gallery8.jpg" alt="">
+        </div>
+        <div class = "load-more">Load more work</div>
+    </div>
+
     <section id="process" class="process">
-        <h1>Our work process</h1>
+        <div class = "process-content">
+            <h1>Our work process</h1>
+            <p>Was years it seasons was there form he in in them together over that <br> 
+            third sixth gathered female creeping bearing behold years.</p>
+        </div>
+        <div class = "process-img">
+            <img src="process-img.jpg" alt="">
+        </div>
     </section>
 
     <section id="services" class="services">
