--- a/OnePage.Html
+++ b/OnePage.Html
@@ -126,7 +126,7 @@
 
     <section id="process" class="process">
         <div class = "process-content">
-            <h1>Our work process</h1>
+            <h2>Our Work Process</h2>
             <p>Was years it seasons was there form he in in them together over that <br> 
             third sixth gathered female creeping bearing behold years.</p>
         </div>
@@ -136,85 +136,45 @@
     </section>
 
     <section id="services" class="services">
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>UI/UX DESIGN</h3>
-                <p>Be set fourth land god <br> darkness make it wherein <br> own</p>
-            </div>
+        <div class="service-item">
+            <img src="service1.jpg" alt="Service 1">
+            <h3>UI/UX DESIGN</h3>
+            <p>Be set fourth land god darkness <br> make it wherein own</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>WEB DEVELOPMENT</h3>
-                <p>A she'd them bring void <br> moving third she'd kind fill</p>
-            </div>
+        <div class="service-item">
+            <img src="service2.jpg" alt="Service 2">
+            <h3>WEB DEVELOPMENT</h3>
+            <p>A she'd them bring void moving <br> third she'd kind fill</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>APP / MOBILE</h3>
-                <p>Dominion man second spirit <br> he, earth they're creeping</p>
-            </div>
+        <div class="service-item">
+            <img src="service3.jpg" alt="Service 3">
+            <h3>APP / MOBILE</h3>
+            <p>Dominion man second spirit he, <br> earth they're creeping</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>GAME DESIGN</h3>
-                <p>Morning his saying moveth it <br> multiply appear life be</p>
-            </div>
+        <div class="service-item">
+            <img src="service4.jpg" alt="Service 4">
+            <h3>GAME DESIGN</h3>
+            <p>Morning his saying moveth it <br> multiply appear life be</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>SEO / MARKETING</h3>
-                <p>Give won't after land fill <br> creeping meat you, may</p>
-            </div>
+        <div class="service-item">
+            <img src="service5.jpg" alt="Service 5">
+            <h3>SEO / MARKETING</h3>
+            <p>Give won't after land fill creeping <br> meat you, may</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>PHOTOGRAPHY</h3>
-                <p>Creepeth one seas cattle <br> grass give moving saw give</p>
-            </div>
+        <div class="service-item">
+            <img src="service6.jpg" alt="Service 6">
+            <h3>PHOTOGRAPHY</h3>
+            <p>Creepeth one seas cattle grass <br> give moving saw give</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>GRAPHIC DESIGN</h3>
-                <p>Open, great whales air rule <br> for, fourth life whales</p>
-            </div>
+        <div class="service-item">
+            <img src="service7.jpg" alt="Service 7">
+            <h3>GRAPHIC DESIGN</h3>
+            <p>Open, great whales air rule for, <br> fourth life whales</p>
         </div>
-        <div class = "box">
-            <div class = "ibox">
-                <div class = "ibox-icon">
-                    <img src="icon1.png" alt="">
-                </div>
-            <div class = "ibox-content">
-                <h3>ILLUSTRATIONS</h3>
-                <p>Whales likeness hath, man <br> kind for them air two won't</p>
-            </div>
+        <div class="service-item">
+            <img src="service8.jpg" alt="Service 8">
+            <h3>ILLUSTRATIONS</h3>
+            <p>Whales likeness hath, man kind <br> for them air two won't</p>
         </div>
     </section>
 
