--- a/OnePage.Html
+++ b/OnePage.Html
@@ -179,42 +179,28 @@
     </section>
 
     <section id="testimonials" class="testimonials">
-        <div class ="gap"></div>
-        <div class ="container">
             <p>"Outstanding job and exceeded all expectations. It was a pleasure <br> to work 
                 with them on a sizable first project and am looking <br> 
                 forward to start the next one asap."</p>
-            <cite>Michael Hopkins</cite>
-        </div>
-        <div class = "gap"></div>
+            <h2>Michael Hopkins</h2>
     </section>
 
     <section id="testimonials2" class="testimonials2">
     </section>
 
     <section id="contact" class="contact">
-        <div class = "gap"></div>
-        <div class = "container">
-            <h2>Need a Project?</h2>
-            <p>Let us know what you're looking for in an agency. We'll take a look and see <br>
-                 if this could be the start of something beautiful.</p>
-        </div>
-        <div class = "contact-form">
-            <form action="#">
-                <div class = "form-row">
-                    <div class = "form-row">
-                        <input type="text" class="form-control required" name="name" placeholder="Your Name">
-                    </div>
-                    <div class = "form-row">
-                        <input type="email" class="form-control required" name="email" placeholder="Your Email">
-                    </div>
-                </div>
-                <input type="text" class="form-control required" name="title" placeholder="Your Title">
-                <textarea class="form-control required" name="message" placeholder="Your Message"></textarea>
-                <button type="submit" class="btn">SEND MESSAGE</button>
-            </form>
-        </div>
-
+        <h2>Need a Project?</h2>
+        <p>Let us know what you're looking for in an agency. We'll take a look and see <br>
+            if this could be the start of something beautiful.</p>
+        <form class = "contact-form">
+            <div class = "form-row">
+                <input type="text" class="form-control required" name="name" placeholder="Your Name">
+                <input type="email" class="form-control required" name="email" placeholder="Your Email">
+            </div>
+            <input type="text" class="form-control required" name="title" placeholder="Your Title">
+            <textarea class="form-control required" name="comment" placeholder="Your Comment"></textarea>
+            <button type="submit" class="btn">SEND MESSAGE</button>
+        </form>
     </section>
 
     <footer>
