--- a/OnePage.Html
+++ b/OnePage.Html
@@ -11,7 +11,7 @@
 
 <body>
     <section id="home" class="home">
-            <div class="bg-image" style="background-image: url('bg-img.jpg');"></div>
+            <div class="bg-image" style="background-image: url('bg-img2.jpg');"></div>
             
             <nav class="navbar">
                 <div class="container">
@@ -204,10 +204,10 @@
     </section>
 
     <footer>
-        <div class = "container">
+        <div class = "footer-container">
             <div class = "col1">
-                <h3 class="h5 mb-20">Piroll Design, Inc.</h3>
-                <p class="mb-0">&copy; 2017 Piroll. All rights reserved. <br> Design by robirurk.</p>
+                <h3>Piroll Design, Inc.</h3>
+                <p>&copy; 2017 Piroll. All rights reserved. <br> Design by robirurk.</p>
             </div>
             <div class = "col2">
                 <a href="#">hello@pirolltheme.com</a>
